updated highlighter to pigments

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "127.0.0.1:4000" # the base hostname & protocol for your site
 twitter_username: k_yan88
 github_username:  yankev
-highlighter: rouge
+highlighter: pygments
 
 # Build settings
 markdown: kramdown
